<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pirmoji Pagalba</string>
    <string name="sos_number">111-222-333-444</string>
    <string name="emergency_header">PIRMOS PAGALBOS GAIRĖS, …</string>
    <string name="hospital_header">RASK ARTIMIAUSIĄ LIGONINĘ</string>
    <string name="heart_header">DIRBTINIS ŠIRDIES MASAŽAS (CPR)</string>
    <string name="first_step_title">Iškvieskite greitąją pagalbą.</string>
    <string name="first_step_subtitle">Jei esate ne vienas - paprašykite aplinkinių pagalbos!</string>
    <string name="second_step">Atloškite galvą, praverkite kvėpavimo takus ir patikrinkite ar sužeistasis kvėpuoja.</string>
    <string name="third_step">Atloškite galvą, užspauskite nosį ir įpūskite oro.</string>
    <string name="fourth_step">Tvirtai dėkite rankas ties apatiniu krūtinkaulio trečdaliu ir pradėkite krūtinės paspaudimus. Krūtinę reikia spausti apie 120 kartų per minutę greičiu. Kas 30 paspaudimų 2 kartus įpūsti oro. Paspaudimų ir įpūtimų santykis 30:2. Krūtinę spausti 5-6 cm.</string>
    <string name="fifth_step">Kad palaikytumėte reikiamą tempą - spauskite \"pradėti\" ir programėlė jums padės palaikyti tempą.</string>
    <string name="push">SPAUSTI</string>
    <string name="blow">PŪSTI</string>
    <string name="search">Paieška</string>
    <string name="numberName">033</string>
    <string name="start_button_name">PRADĖTI</string>
    <string name="stop_button_name">BAIGTI</string>
    <string name="heart_prepare">Pasiruoškite atlikti CPR</string>

</resources>
