<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView6"
            android:paddingLeft="8dp"
            android:background="@color/header_background"
            android:textColor="@color/dark_red"
            android:paddingBottom="5dp"
            android:text="@string/heart_header"
            android:paddingTop="5dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal"
                          android:padding="@dimen/heart_padding"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25dp"
                        android:text="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="17dp"
                        android:layout_alignParentLeft="true"
                        android:textColor="@color/dark_red"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:id="@+id/main1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/heart_text_size"
                            android:text="@string/first_step_title"
                            android:textColor="@color/blue"/>

                    <LinearLayout
                            android:orientation="horizontal"
                            android:id="@+id/item_button"
                            android:background="@drawable/button112"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="13dp"
                            android:layout_marginBottom="13dp"
                            android:layout_marginRight="26dp">
                        <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:id="@+id/buttonImage"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="4dp"
                                android:text="@string/numberName"
                                android:textColor="@color/blue"
                                android:textSize="25dp"
                                android:id="@+id/buttonText"/>
                    </LinearLayout>

                    <TextView
                            android:id="@+id/sub1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/dark_red"/>
                    <!--android:text="@string/first_step_subtitle"-->
                </LinearLayout>

    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_red" />

    <LinearLayout android:orientation="horizontal"
                  android:padding="@dimen/heart_padding"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="2"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="17dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/dark_red"/>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/main2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heart_text_size"
                    android:textColor="@color/blue"/>
            <!--android:text="@string/second_step"-->
        </LinearLayout>

    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_red" />
    <LinearLayout android:orientation="horizontal"
                  android:padding="@dimen/heart_padding"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="3"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="17dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/dark_red"/>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/main3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heart_text_size"
                    android:text="@string/third_step"
                    android:textColor="@color/blue"/>
            </LinearLayout>

    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_red" />
    <LinearLayout android:orientation="horizontal"
                  android:padding="@dimen/heart_padding"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="4"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="17dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/dark_red"/>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/main4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heart_text_size"
                    android:textColor="@color/blue"/>
            <!--android:text="@string/fourth_step"-->
                </LinearLayout>

    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_red"/>

    <LinearLayout android:orientation="horizontal"
                  android:padding="@dimen/heart_padding"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="5"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="17dp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/dark_red"/>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/main5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/heart_text_size"
            android:textColor="@color/blue"/>
            <!--android:text="@string/fifth_step"-->
        </LinearLayout>

</LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="30dp"
                    android:textSize="25dp"
                    android:layout_centerVertical="true"
                    android:text="@string/push"
                    android:textColor="@color/blue"
                    android:id="@+id/push"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="90dp"
                    android:text="0"
                    android:textColor="@color/blue"
                    android:id="@+id/sec"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textSize="25dp"
                    android:layout_centerVertical="true"
                    android:text="@string/blow"
                    android:textColor="@color/dark_red"
                    android:id="@+id/blow"/>
        </RelativeLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/stop_button"
                android:background="@drawable/button112"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_start_button_name"
                    android:textColor="@color/blue"
                    android:layout_margin="16dp"
                    android:textSize="30dp"
                    android:id="@+id/stop_text"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
</ScrollView>


</LinearLayout>